Footer z-index fix, and get hostname for oauth

--- a/styles/AthleteFooter.module.scss
+++ b/styles/AthleteFooter.module.scss
@@ -2,6 +2,7 @@
 
 .footer {
     position: fixed;
+    z-index: 1000; // We have to do this to ensure leaflet renders underneath the footer...
     bottom: 0;
 
     filter: drop-shadow($drop-shadow);
